--- a/Tasker/WebApp/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/Tasker/WebApp/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿@using Microsoft.AspNetCore.Identity.UI.V4.Pages.Internal.Account
+﻿@using System.Globalization
+@using Microsoft.AspNetCore.Identity.UI.V4.Pages.Internal.Account
 <!DOCTYPE html>
 <html>
 <head>
@@ -534,9 +535,13 @@
   </main>
   
   <!-- ### $App Screen Footer ### -->
-  <footer class="bdT ta-c p-30 lh-0 fsz-sm c-grey-600">
-    <span>Copyright © 2019 Tasker. All rights reserved.</span>
-  </footer>
+<footer class="bdT ta-c p-30 lh-0 fsz-sm c-grey-600">
+  <div class="row">
+    <div class="col-md-4">Copyright © 2019 Tasker. All rights reserved.</div>
+    <div class="col-md-4">UICulture: @CultureInfo.CurrentUICulture.Name Culture: @CultureInfo.CurrentUICulture.Name</div>
+    <div class="col-md-4"><partial name="_LanguageSelectionPartial"/></div>
+  </div>
+</footer>
   </div>
 </div>
 
