--- a/Tasker/WebApp/Areas/Admin/Views/TaskerTasks/Create.cshtml
+++ b/Tasker/WebApp/Areas/Admin/Views/TaskerTasks/Create.cshtml
@@ -43,7 +43,7 @@
             </div>
             <div class="form-group">
                 <a class="btn btn-outline-success" role="button" asp-action="Index">@Resources.Views.Shared._Layout.BackToList</a>
-                <input type="submit" value=@Resources.Views.Shared._Layout.Create class="btn btn-primary" style="float: right;"/>
+                <input type="submit" value=@Resources.Views.Shared._Layout.Create class="btn btn-info" style="float: right;"/>
             </div>
         </form>
     </div>
